--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ config/database.yml
 /log/*
 !/log/.keep
 /tmp
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
